<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="about_app">About App</string>
    <string name="about_team">About Team</string>
    <string name="add">Add</string>
    <string name="add_new_event">Add new event</string>
	<string name="add_new_variable">Add new variable</string>
    <string name="an_error_occured">An error occured</string>
    <string name="app_configration">App Configration</string>
    <string name="app_name">Android AppStudio</string>
    <string name="app_setup">App Setup</string>
    <string name="by">by</string>
    <string name="cancel">Cancel</string>
    <string name="commitSha">Commit SHA</string>
    <string name="commit_sha_copied">Commit SHA copied to clipboard</string>
    <string name="create_new_layout">Create new layout</string>
    <string name="create_new_project">Create new project</string>
    <string name="delete">Delete</string>
    <string name="discord">Discord</string>
    <string name="dismiss">Dismiss</string>
    <string name="done">Done</string>
	<string name="extensions">Extensions</string>
    <string name="fields_not_filled_properly">Look like you have not filled the fields properly or skipped them that are required. Please correct the details of fields.</string>
    <string name="failed_to_deserialize_file_model">Failed to deserialize FileModel.</string>
    <string name="generste_code">Generate code</string>
    <string name="icst">Innovative Creations of Software Technology</string>
    <string name="instagram">Instagram</string>
    <string name="loading">Loading</string>
    <string name="minimum_sdk_version">Minimum SDK version</string>
    <string name="next">Next</string>
    <string name="no_events_yet">No events yet.</string>
    <string name="no_files_yet">No files yet.</string>
    <string name="no_layouts_yet">No layouts yet.</string>
    <string name="no_projects_yet">No projects yet.</string>
    <string name="no_resource_yet">No resource yet.</string>
    <string name="no_thanks">No thanks</string>
    <string name="package_name">Package name</string>
    <string name="please_wait">Please wait...</string>
    <string name="previous">Previous</string>
    <string name="project_delete_warning_text">Are you sure you want to delete selected project? Once the project deleted you cannot recover it.</string>
    <string name="project_name">Project name</string>
    <string name="setting">Setting</string>
    <string name="settings">Settings</string>
    <string name="social_links">Social Links</string>
    <string name="source_code">Source Code</string>
    <string name="source_license">License and Attribution</string>
    <string name="storage_permission_denied">Storage permission denied</string>
    <string name="storage_permission_is_highly_recommend_for_storing_and_reading_files_in_device_without_this_permission_you_cannot_be_able_to_use_this_app">Storage permission is required for storing and reading files in device without this permission you cannot be able touse this app.</string>
    <string name="storage_permission_is_required_please_allow_app_to_use_storage_in_next_page">Storage permission is required please allow app to use storage in next page.</string>
    <string name="storage_permission_required">Storage permission required</string>
    <string name="str_continue">Continue</string>
    <string name="target_sdk_version">Target SDK Version</string>
	<string name="terminal">Terminal</string>
    <string name="version_code">Version code</string>
    <string name="version_name">Version name</string>
    <string name="version_name_copied">Version name copied to clipboard</string>
    <string name="warning">Warning</string>
	<string name="x">X</string>
    <string name="youtube">Youtube</string>
</resources>
