<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/source_License"
        android:icon="@drawable/file_document"
        android:title="License and Attribution"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/about_team"
        android:icon="@drawable/ic_team"
        android:title="@string/about_team"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/about_app"
        android:icon="@drawable/ic_info"
        android:title="@string/about_app"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/extensions"
        android:icon="@drawable/ic_extension"
        android:title="@string/extensions"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/terminal"
        android:icon="@drawable/ic_terminal"
        android:title="@string/terminal"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_setting"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
</menu>
