<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:id="@+id/root">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:id="@+id/addEventSection">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/list" />

        </LinearLayout>

        <LinearLayout
            android:layout_height="300dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:id="@+id/info">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="?attr/colorOnSurface"
                android:id="@+id/tv_info"
                android:text="@string/no_events_yet" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:orientation="horizontal">

        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_marginEnd="4dp"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_weight="1"
            android:id="@+id/cancel"
            android:text="@string/cancel" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:id="@+id/add"
            android:text="@string/add" />

    </LinearLayout>

</LinearLayout>
