<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/coordinator">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior"
        android:fitsSystemWindows="true"
        android:id="@+id/appbar">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:id="@+id/toolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:padding="8dp"
        android:id="@+id/nested_scroll_view">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:weightSum="100"
                    android:gravity="center"
                    android:padding="8dp"
                    android:orientation="vertical">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        app:cardElevation="8dp"
                        app:cardUseCompatPadding="true"
                        style="?attr/materialCardViewElevatedStyle"
                        app:cardCornerRadius="40dp"
                        app:cardPreventCornerOverlap="false">

                        <ImageView
                            android:layout_height="80dp"
                            android:layout_width="80dp"
                            android:src="@drawable/github_org_logo"
                            android:scaleType="fitCenter" />

                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textSize="18sp"
                        android:textColor="?attr/colorOnSurface"
                        android:textStyle="bold"
                        android:id="@+id/appName"
                        android:text="@string/app_name" />

                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content">

                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:layout_marginEnd="2dp"
                            android:textColor="?attr/colorOnSurface"
                            android:layout_marginStart="2dp"
                            android:text="@string/by" />

                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:layout_marginEnd="2dp"
                            android:textColor="?attr/colorOnSurface"
                            android:layout_marginStart="2dp"
                            android:id="@+id/orgName"
                            android:text="@string/icst" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:strokeWidth="1dp"
                android:layout_marginTop="8dp">

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:gravity="center_vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_height="30dp"
                            android:layout_width="30dp"
                            android:src="@drawable/ic_alpha_v"
                            android:layout_marginEnd="8dp"
                            android:tint="?attr/colorOnSurface" />

                        <LinearLayout
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                android:textSize="18sp"
                                android:textColor="?attr/colorOnSurface"
                                android:text="@string/version_name" />

                            <TextView
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                android:textColor="?attr/colorOnSurface"
                                android:id="@+id/versionName" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:gravity="center_vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_height="30dp"
                            android:layout_width="30dp"
                            android:src="@drawable/ic_commit_source"
                            android:layout_marginEnd="8dp"
                            android:tint="?attr/colorOnSurface" />

                        <LinearLayout
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                android:textSize="18sp"
                                android:textColor="?attr/colorOnSurface"
                                android:text="@string/commitSha" />

                            <TextView
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                android:textColor="?attr/colorOnSurface"
                                android:id="@+id/commitSha" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
