<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/drawerLayout">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/appbar">

                <com.google.android.material.appbar.MaterialToolbar
                    android:layout_height="?attr/actionBarSize"
                    android:layout_width="match_parent"
                    android:id="@+id/toolbar" />

            </com.google.android.material.appbar.AppBarLayout>

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:orientation="vertical"
                    android:id="@+id/projectList">

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:id="@+id/list" />

                </LinearLayout>

                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:gravity="center"
                    android:id="@+id/loading">

                    <ProgressBar
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:indeterminate="true"
                        android:id="@+id/progressbar" />

                </LinearLayout>

                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:id="@+id/noProjectsYet">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textSize="28sp"
                        android:textColor="?attr/colorPrimary"
                        android:text="@string/app_name"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:gravity="center">

                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:textColor="?attr/colorOnSurface"
                            android:text="@string/no_projects_yet" />

                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:textColor="?attr/colorPrimary"
                            android:layout_marginStart="2dp"
                            android:id="@+id/createNewProject"
                            android:text="@string/create_new_project" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:gravity="center"
                    android:id="@+id/errorSection">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textColor="?attr/colorOnSurface"
                        android:id="@+id/errorText" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:icon="@drawable/plus"
            android:layout_margin="16dp"
            android:text="@string/create_new_project"
            android:id="@+id/fab"
            android:layout_gravity="end|bottom" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_height="match_parent"
        android:layout_width="300dp"
        app:menu="@menu/activity_drawer_project_manager_menu"
        app:headerLayout="@layout/layout_drawer_header_project_manager"
        android:layout_gravity="start"
        android:id="@+id/navigationView" />

</androidx.drawerlayout.widget.DrawerLayout>
